welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: illegal start of statement
do{avance();)}
            ^Poucet:4: error: ';' expected but '{' found.
while(!sortieTrouvee){for(x<-1 to 5){
                     ^