welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur = 0
do{avance();)}
while(!sortieTrouvee){for(x<-1 to 5){
	avance();
}
	if(SurBiscuit){
		compteur = compteur + 1
	}
}

